# weatherbox

./: .gitmodules  LICENSE  README.md
.trunk/: trunk.yaml
firmware/: CMakeLists.txt  README.md
firmware/include/: lwipopts.h  mbedtls_config.h
firmware/src/: main.c
firmware/src/config/: hardware.h  network.h
firmware/src/ntp/: CMakeLists.txt  config.h  ntp.c  ntp.h
hardware/: fp-lib-table  sym-lib-table  weatherbox.kicad_pcb  weatherbox.kicad_pro  weatherbox.kicad_sch
hardware/lib/amphenol-ffc/Connector_FFC-FPC_Amphenol.pretty/: 10051922-2410_1x24-2MP_P0.50mm_Horizontal.kicad_mod
